--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "*.m": "matlab",
-        "omp.h": "c"
+        "omp.h": "c",
+        "cmath": "c"
     }
 }
